# niva-nbot-eval

./: .gitignore  COMPREHENSIVE_BASELINE_ANALYSIS.md  README.md
analysis_results/: simple_berkeley_analysis.json
assets/: evaluation_scene.usd  evaluation_scene_info.json
berkeley_foundation_training/: berkeley_training_results.json
checkpoints/: checkpoint_episode_1000.pth  checkpoint_episode_2000.pth  checkpoint_episode_3000.pth  checkpoint_episode_4000.pth  checkpoint_episode_5.pth  checkpoint_episode_5000.pth  checkpoint_episode_6000.pth  checkpoint_episode_7000.pth  checkpoint_episode_8000.pth  checkpoint_episode_9000.pth
compatible_berkeley_training/: compatible_berkeley_results.json
docs/: BULLETPROOF_VALIDATION_CODE_AUDIT_REPORT.md  BULLETPROOF_VALIDATION_PLAN.md  COMPREHENSIVE_BASELINE_VS_DR_ANALYSIS.md  COMPREHENSIVE_NIVA_VALIDATION_EXECUTION_PLAN.md  COMPREHENSIVE_NIVA_VALIDATION_RESULTS_REPORT.md  CRITICAL_VALIDATION_INTEGRITY_REPORT.md  DR_GAN_IMPROVEMENT_ANALYSIS_REPORT.md  FINAL_THREE_WAY_COMPARISON_ANALYSIS.md  LEVEL_6_WAREHOUSE_REALISTIC_PLAN.md  NIVA_BERKELEY_TRAINING_PLAN.md  PHASE1_IMPLEMENTATION_DEMONSTRATION.md  PICK_PLACE_TRAINING_VALIDATION_PLAN.md  REVISED_VALIDATION_PLAN_V3.md  ULTIMATE_FOUR_WAY_COMPARISON_ANALYSIS.md
dr_gan_training/: dr_gan_training_results.json
evaluation_results/: authentic_baseline_trial_20250902_132354.json  berkeley_real_dr_full_evaluation_20250902_234836.json  berkeley_real_dr_level_1_campaign_20250902_234830.json  berkeley_real_dr_level_2_campaign_20250902_234832.json  berkeley_real_dr_level_3_campaign_20250902_234833.json  berkeley_real_dr_level_4_campaign_20250902_234835.json  berkeley_real_dr_level_5_campaign_20250902_234836.json  berkeley_vs_dr_evaluation.json  corrected_berkeley_real_dr_level_1_campaign_20250902_235500.json  corrected_berkeley_real_dr_level_2_campaign_20250902_235500.json  corrected_berkeley_real_dr_level_3_campaign_20250902_235500.json  corrected_berkeley_real_dr_level_4_campaign_20250902_235500.json  corrected_berkeley_real_dr_level_5_campaign_20250902_235500.json  corrected_berkeley_real_dr_quick_test_20250902_235500.json  corrected_dr_model_evaluation_results.json  dr_gan_enhanced_full_evaluation_20250903_031006.json  dr_gan_enhanced_level_1_campaign_20250903_031004.json  dr_gan_enhanced_level_2_campaign_20250903_031005.json  dr_gan_enhanced_level_3_campaign_20250903_031005.json  dr_gan_enhanced_level_4_campaign_20250903_031006.json  dr_gan_enhanced_level_5_campaign_20250903_031006.json  dr_model_evaluation_20250902_142002.json  dr_model_evaluation_20250902_142038.json  dr_model_evaluation_results.json  final_corrected_berkeley_real_dr_full_evaluation_20250903_000154.json  final_corrected_berkeley_real_dr_level_1_campaign_20250903_000153.json  final_corrected_berkeley_real_dr_level_2_campaign_20250903_000153.json  final_corrected_berkeley_real_dr_level_3_campaign_20250903_000154.json  (+21 more)
log/: latest_build  latest_list
src/servo_keyboard/: CMakeLists.txt  package.xml
src/servo_keyboard/config/: servo_keyboard_params.yaml
src/servo_keyboard/launch/: servo_keyboard.launch.py
src/servo_keyboard/src/: servo_keyboard_input.cpp
(+1069 files in other folders)
