<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>servo_keyboard</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ligerfotis@gmail.com">Fotios Lyegrakis</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>controller_manager_msgs</build_depend>
  <exec_depend>controller_manager_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
